project updated: reservation service methods changed , websocket added , and code are maintained according to sonarqube