@@ -2,40 +2,46 @@ package com.himalayanbus.service.implementation;
 
 import com.himalayanbus.exception.ReservationException;
 import com.himalayanbus.persistence.entity.*;
-import com.himalayanbus.persistence.repository.*;
+import com.himalayanbus.persistence.repository.IBusRepository;
+import com.himalayanbus.persistence.repository.IPassengerRepository;
+import com.himalayanbus.persistence.repository.IReservationRepository;
+import com.himalayanbus.persistence.repository.IRouteRepository;
 import com.himalayanbus.security.token.AccessToken;
 import com.himalayanbus.service.IReservationService;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.scheduling.annotation.Scheduled;
+
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ReservationService implements IReservationService {
 
     private final IReservationRepository reservationRepository;
     private final IBusRepository busRepository;
-    private final IUserRepository userRepository;
     private final IRouteRepository routeRepository;
-
     private final IPassengerRepository passengerRepository;
     private final AccessToken requestAccessToken;
     private static final String USER_NOT_FOUND_MESSAGE = "User not found with the provided token";
 
-    public ReservationService(IReservationRepository reservationRepository, IBusRepository busRepository,
-                              IUserRepository userRepository, IRouteRepository routeRepository, IPassengerRepository passengerRepository,
+    private static final String STATUS_CANCELLED = "Cancelled";
+    private static final String STATUS_ACTIVE = "Active";
+
+    public ReservationService(IReservationRepository reservationRepository, IBusRepository busRepository
+            , IRouteRepository routeRepository, IPassengerRepository passengerRepository,
                               AccessToken requestAccessToken) {
         this.reservationRepository = reservationRepository;
         this.busRepository = busRepository;
-        this.userRepository = userRepository;
         this.routeRepository = routeRepository;
         this.passengerRepository = passengerRepository;
         this.requestAccessToken = requestAccessToken;
     }
+
+
 
 
 
@@ -61,12 +67,37 @@ public class ReservationService implements IReservationService {
         Reservation reservation = createReservation(dto, passenger, bus);
 
         updateBusAvailability(bus, dto.getBookedSeat(), false);
-        updateReservationStatus(reservation, bus);
+        updateReservationStatus();
 
         return reservationRepository.save(reservation);
     }
 
-    private Reservation createReservation(ReservationDTO dto, Passenger passenger, Bus bus) throws ReservationException {
+
+
+    @Scheduled(fixedRate = 60000)
+    public void updateReservationStatus() {
+        List<Reservation> reservations = reservationRepository.findAll();
+
+        for (Reservation reservation : reservations) {
+            if (reservation.getBus() != null && reservation.getBus().getArrivalTime() != null && reservation.getJourneyDate() != null) {
+                LocalDateTime currentDateTime = LocalDateTime.now();
+                LocalDateTime arrivalDateTime = LocalDateTime.of(reservation.getBus().getJourneyDate(), LocalTime.from(reservation.getBus().getArrivalTime()));
+
+                if (currentDateTime.isEqual(arrivalDateTime) || currentDateTime.isAfter(arrivalDateTime)) {
+                    reservation.setStatus("Expired");
+                } else {
+                    reservation.setStatus(STATUS_ACTIVE);
+                }
+
+                reservationRepository.save(reservation);
+            }
+        }
+    }
+
+
+
+
+    Reservation createReservation(ReservationDTO dto, Passenger passenger, Bus bus) throws ReservationException {
         Reservation reservation = new Reservation();
 
         if (dto.getJourneyDate().isBefore(LocalDate.now())) {
@@ -76,7 +107,7 @@ public class ReservationService implements IReservationService {
         reservation.setDepartureLocation(dto.getDepartureLocation());
         reservation.setDestination(dto.getDestination());
         reservation.setDate(dto.getJourneyDate());
-        reservation.setStatus("Active");
+        reservation.setStatus(STATUS_ACTIVE);
         reservation.setDate(LocalDate.now());
         reservation.setTime(LocalTime.now());
         reservation.setJourneyDate(dto.getJourneyDate());
@@ -92,43 +123,64 @@ public class ReservationService implements IReservationService {
 
 
 
+
+    User getUserFromToken() throws ReservationException {
+        Long passengerIdFromToken = requestAccessToken.getPassengerId();
+
+        Passenger passenger = passengerRepository.findById(passengerIdFromToken)
+                .orElseThrow(() -> new ReservationException("Passenger not found with the given ID: " + passengerIdFromToken));
+
+
+        return passenger.getUser();
+    }
+
+
+
     @Override
     @Transactional
-    public Reservation updateReservation(Long rid, ReservationDTO dto) throws ReservationException {
+    public Reservation deleteReservation(Long rid) throws ReservationException {
         User user = getUserFromToken();
+        Reservation reservation = getReservationForUser(user, rid);
 
-        List<Reservation> userReservations = viewReservationsForCurrentUser();
+        LocalDate currentDate = LocalDate.now();
 
-        Reservation reservationToUpdate = userReservations.stream()
-                .filter(reservation -> reservation.getReservationID().equals(rid))
-                .findFirst()
-                .orElseThrow(() -> new ReservationException("Reservation not found for the given reservation ID"));
+        validateReservationDeletion(rid, currentDate);
 
-        Route route = findRoute(dto.getDepartureLocation(), dto.getDestination());
-        Bus bus = findBusForRoute(route, dto.getBookedSeat());
+        reservation.setStatus(STATUS_CANCELLED);
+        reservationRepository.save(reservation);
 
-        updateReservationDetails(reservationToUpdate, dto, bus);
-
-        updatePassengerDetailsForReservation(reservationToUpdate, user);
-
-        return reservationRepository.save(reservationToUpdate);
-    }
-
-    private void updatePassengerDetailsForReservation(Reservation reservation, User user) {
-        Passenger passenger = user.getPassenger();
-        if (passenger != null) {
-            reservation.setPassenger(passenger);
+        if (reservation.getBookedSeat() != null) {
+            updateBusAvailability(reservation.getBus(), reservation.getBookedSeat(), true);
+        } else {
+            throw new ReservationException("Booked seats information not found for the reservation");
         }
+
+        scheduledReservationDeletion();
+
+        return reservation;
     }
 
-    @Override
-    @Transactional
-    public Reservation viewReservation(Long rid) throws ReservationException {
-        getUserFromToken();
 
-        return reservationRepository.findById(rid)
-                .orElseThrow(() -> new ReservationException("Reservation with given id is not found"));
+
+
+
+    @Scheduled(initialDelay = 24 * 60 * 60 * 1000, fixedRate = 24 * 60 * 60 * 1000)
+    public void scheduledReservationDeletion() {
+        System.out.println("Scheduled deletion logic started!");
+        LocalDate currentDate = LocalDate.now();
+
+        List<Reservation> reservationsToDelete = reservationRepository
+                .findByStatusAndDateBefore(STATUS_CANCELLED, currentDate.minusDays(1));
+
+        reservationsToDelete.forEach(reservation ->
+                System.out.println("Reservation to delete: " + reservation.getReservationID())
+        );
+
+        reservationRepository.deleteAll(reservationsToDelete);
     }
+
+
+
 
 
     @Override
@@ -144,6 +196,7 @@ public class ReservationService implements IReservationService {
     }
 
 
+
     @Override
     @Transactional
     public List<Reservation> viewReservationsForCurrentUser() throws ReservationException {
@@ -153,112 +206,24 @@ public class ReservationService implements IReservationService {
 
         Passenger passenger = currentUser.getPassenger();
         if (passenger != null) {
+
             List<Reservation> reservations = passenger.getReservationList();
 
             return reservations.stream()
                     .filter(reservation -> {
                         String status = reservation.getStatus();
-                        return status.equals("Active") || status.equals("Expired")|| status.equals("Cancelled");
+                        return status.equals(STATUS_ACTIVE) || status.equals("Expired") || status.equals(STATUS_CANCELLED);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
-            throw new ReservationException("You dont have any reservation at the moment.");
-        }
-    }
-
-
-
-    private void updateReservationStatus(Reservation reservation, Bus bus) {
-        if (bus != null && bus.getArrivalTime() != null && reservation.getJourneyDate() != null) {
-            LocalDate currentDate = LocalDate.now();
-            LocalTime currentTime = LocalTime.now();
-            LocalDate arrivalDate = bus.getJourneyDate();
-            LocalTime arrivalTime = bus.getArrivalTime();
-
-            if (currentDate.isEqual(arrivalDate) && currentTime.isBefore(arrivalTime)) {
-                reservation.setStatus("Active");
-            } else if (currentDate.isEqual(arrivalDate) && currentTime.isAfter(arrivalTime)) {
-                reservation.setStatus("Expired");
-            }
-
-        }
-    }
-
-
-
-
-    @Override
-    @Transactional
-    public List<Reservation> viewReservationByUserId(Long uid) throws ReservationException {
-        Optional<User> optionalUser = userRepository.findById(uid);
-
-        User user = optionalUser.orElseThrow(() -> new ReservationException("User not found with given user id: " + uid));
-
-        Passenger passenger = user.getPassenger();
-
-        if (passenger == null) {
-            throw new ReservationException("Passenger details not found for this user");
+            throw new ReservationException("You don't have any reservations at the moment.");
         }
 
-        List<Reservation> reservations = passenger.getReservationList();
-
-        if (reservations.isEmpty()) {
-            throw new ReservationException("Reservations not found for this user");
-        }
-
-        return reservations;
     }
 
 
 
-    @Override
-    @Transactional
-    public Reservation deleteReservation(Long rid) throws ReservationException {
-        User user = getUserFromToken();
-        Reservation reservation = getReservationForUser(user, rid);
-
-        LocalDate currentDate = LocalDate.now();
-
-        validateReservationDeletion(rid, currentDate);
-
-        reservation.setStatus("Cancelled");
-        reservationRepository.save(reservation);
-
-        updateBusAvailability(reservation.getBus(), reservation.getBookedSeat(), true);
-
-        scheduledReservationDeletion();
-
-        return reservation;
-    }
-
-
-
-
-    @Scheduled(initialDelay = 24 * 60 * 60 * 1000, fixedRate = 24 * 60 * 60 * 1000)
-    public void scheduledReservationDeletion() {
-        LocalDate currentDate = LocalDate.now();
-
-        List<Reservation> reservationsToDelete = reservationRepository
-                .findByStatusAndJourneyDateBefore("Cancelled", currentDate.minusDays(1));
-
-        reservationRepository.deleteAll(reservationsToDelete);
-    }
-
-
-
-
-    User getUserFromToken() throws ReservationException {
-        Long passengerIdFromToken = requestAccessToken.getPassengerId();
-        Passenger passenger = passengerRepository.findById(passengerIdFromToken)
-                .orElseThrow(() -> new ReservationException("Passenger not found with the given ID: " + passengerIdFromToken));
-
-        return passenger.getUser();
-    }
-
-
-
-
-    private Route findRoute(String departureLocation, String destination) throws ReservationException {
+    Route findRoute(String departureLocation, String destination) throws ReservationException {
         Route route = routeRepository.findByRouteFromAndRouteTo(departureLocation, destination);
 
         if (route == null) {
@@ -269,25 +234,9 @@ public class ReservationService implements IReservationService {
     }
 
 
-    private Bus findBusForRoute(Route route, int bookedSeats) throws ReservationException {
-        Bus bus = busRepository.findByRoute(route);
-
-        if (bus == null) {
-            throw new ReservationException("Bus not found for the given starting to destination");
-        }
-
-        int availableSeats = bus.getAvailableSeats();
-
-        if (availableSeats < bookedSeats) {
-            throw new ReservationException("Only " + availableSeats + " seats are available");
-        }
-
-        return bus;
-    }
 
 
-
-    private void updateBusAvailability(Bus bus, int bookedSeats, boolean increaseSeats) {
+    void updateBusAvailability(Bus bus, int bookedSeats, boolean increaseSeats) {
         int availableSeats = bus.getAvailableSeats();
 
         if (increaseSeats) {
@@ -300,7 +249,12 @@ public class ReservationService implements IReservationService {
     }
 
 
-    private Reservation getReservationForUser(User user, Long reservationId) throws ReservationException {
+    Reservation getReservationForUser(User user, Long reservationId) throws ReservationException {
+
+        if (user == null) {
+            throw new ReservationException("User details not provided");
+        }
+
         Passenger passenger = user.getPassenger();
 
         if (passenger != null) {
@@ -318,23 +272,7 @@ public class ReservationService implements IReservationService {
 
 
 
-    private void updateReservationDetails(Reservation reservation, ReservationDTO dto, Bus bus) throws ReservationException {
-        if (dto.getJourneyDate().isBefore(LocalDate.now())) {
-            throw new ReservationException("Journey Date should be in the future");
-        }
-
-        reservation.setDepartureLocation(dto.getDepartureLocation());
-        reservation.setDestination(dto.getDestination());
-        reservation.setDate(dto.getJourneyDate());
-        reservation.setTime(LocalTime.now());
-        reservation.setJourneyDate(dto.getJourneyDate());
-        reservation.setBus(bus);
-        reservation.setFare(bus.getFare() * dto.getBookedSeat());
-        reservation.setBookedSeat(dto.getBookedSeat());
-    }
-
-
-    public void validateReservationDeletion(Long reservationId, LocalDate currentDate) throws ReservationException {
+    void validateReservationDeletion(Long reservationId, LocalDate currentDate) throws ReservationException {
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new ReservationException("Reservation not found"));
 
@@ -353,9 +291,23 @@ public class ReservationService implements IReservationService {
 
         long activeReservationsCount = reservationRepository.countReservationsByDate(currentDate);
 
-        long canceledReservationsCount = reservationRepository.countReservationsByDateAndStatus(currentDate, "Cancelled");
+        long canceledReservationsCount = reservationRepository.countReservationsByDateAndStatus(currentDate, STATUS_CANCELLED);
 
         return Math.max(activeReservationsCount - canceledReservationsCount, 0);
+    }
+
+
+
+    @Override
+    @Transactional
+    public List<Reservation> getAllReservationsByBusId(Long busId) throws ReservationException {
+        List<Reservation> reservations = reservationRepository.findAllByBusBusId(busId);
+
+        if (reservations.isEmpty()) {
+            throw new ReservationException("No reservations found for the bus with ID: " + busId);
+        }
+
+        return reservations;
     }
 
 
@@ -364,3 +316,4 @@ public class ReservationService implements IReservationService {
 
 
 }
+
